# dsv_recruitment

./: Cargo.toml  Final Data Science and MLOps - Test Case.docx  README.md  pluto_nb.html  pluto_nb.jl
src/: main.rs
