[package]
name = "dsv_recruitment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
csv = "1.2.2"
serde = { version = "1.0.165", features = ["derive"] }
#image = "0.24.5"
#minifb = "0.23.0"
#serde_json = "1.0.93"
